lox-tests/tests/assignment/undefined.stderr
ERROR: Undefined variable name 'unknown'
 --> 1:1
  |
1 | unknown = "what"; // expect runtime error: Undefined variable 'unknown'.
  | ^--------------^
